protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__bounded_tree_for_unbounded_pre.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<ADD forks>];
  node0 -> node8 [label=<WAIT forks>];
  node0 -> node13 [label=<WAIT continues>];
  node1 [label=<ADD<SUB>1</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node1 -> node2 [label=<ADD forks>];
  node1 -> node3 [label=<WAIT forks>];
  node1 -> node4 [label=<WAIT continues>];
  node2 [label=<ADD<SUB>0</SUB><SUP>(0)</SUP> ∧ ADD<SUB>1</SUB><SUP>(1)</SUP>>];
  node3 [label=<ADD<SUB>0</SUB><SUP>(0)</SUP> ∧ WAIT<SUB>0</SUB><SUP>(1)</SUP>>];
  node4 [label=<ADD<SUB>0</SUB><SUP>(0)</SUP> ∧ WAIT<SUB>pre[1]</SUB><SUP>(1)</SUP>>];
  node4 -> node5 [label=<WAIT forks>];
  node4 -> node6 [label=<WAIT continues>];
  node5 [label=<WAIT<SUB>0</SUB><SUP>(1)</SUP>>];
  node6 [label=<WAIT<SUB>pre[1]</SUB><SUP>(1)</SUP>>];
  node6 -> node7 [label=<WAIT forks>];
  node6 -> node6 [label=<WAIT continues>];
  node7 [label=<WAIT<SUB>0</SUB><SUP>(1)</SUP>>];
  node8 [label=<WAIT<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node8 -> node9 [label=<ADD forks>];
  node8 -> node10 [label=<WAIT forks>];
  node8 -> node11 [label=<WAIT continues>];
  node9 [label=<ADD<SUB>1</SUB><SUP>(1)</SUP>>];
  node10 [label=<WAIT<SUB>0</SUB><SUP>(1)</SUP>>];
  node11 [label=<WAIT<SUB>pre[1]</SUB><SUP>(1)</SUP>>];
  node11 -> node12 [label=<WAIT forks>];
  node11 -> node11 [label=<WAIT continues>];
  node12 [label=<WAIT<SUB>0</SUB><SUP>(1)</SUP>>];
  node13 [label=<WAIT<SUB>pre[1]</SUB><SUP>(0)</SUP>>];
  node13 -> node14 [label=<WAIT forks>];
  node13 -> node13 [label=<WAIT continues>];
  node14 [label=<WAIT<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node14 -> node15 [label=<ADD forks>];
  node14 -> node16 [label=<WAIT forks>];
  node14 -> node17 [label=<WAIT continues>];
  node15 [label=<ADD<SUB>1</SUB><SUP>(1)</SUP>>];
  node16 [label=<WAIT<SUB>0</SUB><SUP>(1)</SUP>>];
  node17 [label=<WAIT<SUB>pre[1]</SUB><SUP>(1)</SUP>>];
  node17 -> node18 [label=<WAIT forks>];
  node17 -> node17 [label=<WAIT continues>];
  node18 [label=<WAIT<SUB>0</SUB><SUP>(1)</SUP>>];
}
