protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__finite_pre_phase_choices_steady_state.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<ADD forks>];
  node0 -> node2 [label=<ADD continues>];
  node0 -> node3 [label=<SUB forks>];
  node1 [label=<ADD<SUB>1</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node1 -> node4 [label=<ADD forks>];
  node1 -> node5 [label=<ADD continues>];
  node1 -> node6 [label=<SUB forks>];
  node2 [label=<ADD<SUB>pre[1]</SUB><SUP>(0)</SUP>>];
  node2 -> node1 [label=<ADD forks>];
  node3 [label=<SUB<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node3 -> node1 [label=<ADD forks / R<SUB>ADD</SUB>>];
  node3 -> node2 [label=<ADD continues / R<SUB>ADD</SUB>>];
  node3 -> node3 [label=<SUB forks / R<SUB>SUB</SUB>>];
  node4 [label=<ADD<SUB>0</SUB><SUP>(0)</SUP> ∧ ADD<SUB>1</SUB><SUP>(1)</SUP> ∧ E<SUP>(2)</SUP>>];
  node4 -> node4 [label=<ADD forks / R<SUB>ADD</SUB>>];
  node4 -> node5 [label=<ADD continues / R<SUB>ADD</SUB>>];
  node4 -> node6 [label=<SUB forks / R<SUB>ADD</SUB>, R<SUB>SUB</SUB>>];
  node5 [label=<ADD<SUB>0</SUB><SUP>(0)</SUP> ∧ ADD<SUB>pre[1]</SUB><SUP>(1)</SUP>>];
  node5 -> node1 [label=<ADD forks / R<SUB>ADD</SUB>>];
  node6 [label=<ADD<SUB>0</SUB><SUP>(0)</SUP> ∧ SUB<SUB>0</SUB><SUP>(1)</SUP> ∧ E<SUP>(2)</SUP>>];
  node6 -> node1 [label=<ADD forks / R<SUB>ADD</SUB><SUP>2</SUP>>];
  node6 -> node2 [label=<ADD continues / R<SUB>ADD</SUB><SUP>2</SUP>>];
  node6 -> node3 [label=<SUB forks / R<SUB>SUB</SUB><SUP>2</SUP>>];
}
