protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__steady_state_add_d1.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<A forks after 1>];
  node1 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node1 -> node1 [label=<A forks after 1 / R<SUB>A</SUB>>];
}
