protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__steady_state_add_d1_long_pre.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<A continues>];
  node0 -> node2 [label=<S continues>];
  node1 [label=<A<SUB>pre[1]</SUB><SUP>(0)</SUP>>];
  node1 -> node3 [label=<A forks after 2>];
  node2 [label=<S<SUB>pre[1]</SUB><SUP>(0)</SUP>>];
  node2 -> node4 [label=<S forks after 2>];
  node3 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node3 -> node1 [label=<A continues / R<SUB>A</SUB>>];
  node3 -> node2 [label=<S continues / R<SUB>S</SUB>>];
  node4 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node4 -> node1 [label=<A continues / R<SUB>A</SUB>>];
  node4 -> node2 [label=<S continues / R<SUB>S</SUB>>];
}
