protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__steady_state_add_d1_unbounded_pre.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<A forks>];
  node0 -> node2 [label=<A continues>];
  node0 -> node3 [label=<S forks>];
  node0 -> node4 [label=<S continues>];
  node1 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node1 -> node1 [label=<A forks / R<SUB>A</SUB>>];
  node1 -> node2 [label=<A continues / R<SUB>A</SUB>>];
  node1 -> node3 [label=<S forks / R<SUB>S</SUB>>];
  node1 -> node4 [label=<S continues / R<SUB>S</SUB>>];
  node2 [label=<A<SUB>pre[1]</SUB><SUP>(0)</SUP>>];
  node2 -> node1 [label=<A forks>];
  node2 -> node2 [label=<A continues>];
  node3 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node3 -> node1 [label=<A forks / R<SUB>A</SUB>>];
  node3 -> node2 [label=<A continues / R<SUB>A</SUB>>];
  node3 -> node3 [label=<S forks / R<SUB>S</SUB>>];
  node3 -> node4 [label=<S continues / R<SUB>S</SUB>>];
  node4 [label=<S<SUB>pre[1]</SUB><SUP>(0)</SUP>>];
  node4 -> node3 [label=<S forks>];
  node4 -> node4 [label=<S continues>];
}
