protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__steady_state_add_d2.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<A forks>];
  node1 [label=<A<SUB>1</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node1 -> node2 [label=<A forks>];
  node2 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ A<SUB>1</SUB><SUP>(1)</SUP> ∧ E<SUP>(2)</SUP>>];
  node2 -> node2 [label=<A forks / R<SUB>A</SUB>>];
}
