protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__steady_state_varying_pre_and_post_lengths.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<A forks after 1>];
  node0 -> node2 [label=<A continues>];
  node0 -> node3 [label=<S forks after 1>];
  node1 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node1 -> node1 [label=<A forks after 1 / R<SUB>A</SUB>>];
  node1 -> node2 [label=<A continues / R<SUB>A</SUB>>];
  node1 -> node3 [label=<S forks after 1 / R<SUB>S</SUB>>];
  node2 [label=<A<SUB>pre[1]</SUB><SUP>(0)</SUP>>];
  node2 -> node1 [label=<A forks after 2>];
  node3 [label=<S<SUB>1</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node3 -> node4 [label=<A forks after 1>];
  node3 -> node5 [label=<A continues>];
  node3 -> node6 [label=<S forks after 1>];
  node4 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ A<SUB>0</SUB><SUP>(1)</SUP> ∧ E<SUP>(2)</SUP>>];
  node4 -> node1 [label=<A forks after 1>];
  node4 -> node2 [label=<A continues>];
  node4 -> node3 [label=<S forks after 1 / R<SUB>S</SUB><SUP>2</SUP>>];
  node5 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ A<SUB>pre[1]</SUB><SUP>(1)</SUP>>];
  node5 -> node1 [label=<A forks after 2 / R<SUB>A</SUB>>];
  node6 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ S<SUB>1</SUB><SUP>(1)</SUP> ∧ E<SUP>(2)</SUP>>];
  node6 -> node4 [label=<A forks after 1 / R<SUB>A</SUB>, R<SUB>S</SUB>>];
  node6 -> node5 [label=<A continues / R<SUB>A</SUB>, R<SUB>S</SUB>>];
  node6 -> node6 [label=<S forks after 1 / R<SUB>S</SUB>>];
}
