protocols/src/tests/snapshots/protocols__ir__meta_automaton__tests__steady_state_varying_pre_lengths.snap
---
source: protocols/src/ir/meta_automaton.rs
expression: content
---
digraph "driver_meta" {
  rankdir=LR;
  node [shape=box];
  entry [shape=plain,label="ENTRY"];
  entry -> node0;
  node0 [label=<E<SUP>(0)</SUP>>];
  node0 -> node1 [label=<select A>];
  node0 -> node2 [label=<select S>];
  node1 [label=<A<SUB>pre</SUB><SUP>(0)</SUP>>];
  node1 -> node3 [label=<A forks after {1, 2}>];
  node2 [label=<S<SUB>pre</SUB><SUP>(0)</SUP>>];
  node2 -> node4 [label=<S forks after 1>];
  node3 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node3 -> node5 [label=<select A>];
  node3 -> node6 [label=<select S>];
  node4 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ E<SUP>(1)</SUP>>];
  node4 -> node7 [label=<select A>];
  node4 -> node8 [label=<select S>];
  node5 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ A<SUB>pre</SUB><SUP>(1)</SUP>>];
  node5 -> node3 [label=<A forks after {1, 2} / R<SUB>A</SUB>>];
  node6 [label=<A<SUB>0</SUB><SUP>(0)</SUP> ∧ S<SUB>pre</SUB><SUP>(1)</SUP>>];
  node6 -> node4 [label=<S forks after 1 / R<SUB>S</SUB>>];
  node7 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ A<SUB>pre</SUB><SUP>(1)</SUP>>];
  node7 -> node3 [label=<A forks after {1, 2} / R<SUB>A</SUB>>];
  node8 [label=<S<SUB>0</SUB><SUP>(0)</SUP> ∧ S<SUB>pre</SUB><SUP>(1)</SUP>>];
  node8 -> node4 [label=<S forks after 1 / R<SUB>S</SUB>>];
}
